modifs send controle+lien vers page

--- a/templates/modificationQuestion.html
+++ b/templates/modificationQuestion.html
@@ -110,6 +110,7 @@
                 <li><a href="../creationQuestion">Créer une question</a></li>
                 <li><a href="../creationFeuille">Créer une feuille d'exercices</a></li>
                 <li><a href="../creationSequence">Créer une séquence</a></li>
+                <li><a href="../controle">Créer des contrôles</a></li>
                 <li><a href="../deco">Se déconnecter</a></li>
             </ul>
         </li>
