--- a/templates/affichageControle.html
+++ b/templates/affichageControle.html
@@ -28,11 +28,16 @@
     <ul class="menu">
         <li>
             {{Username}}
-            <ul class="sli_finalref="creationQuestion">Créer une question</a></li>
-                <li><a href="creationFeuille">Créer une feuille d'exercices</a></li>
+            <ul class="sousMenu">
+				<li><a href="/">Accueil</a></li>
+				<li><a href="profil">Profil</a></li>
+				<li><a href="BDD">Liste de vos questions</a></li>
+				<li><a href="creationQuestion">Créer une question</a></li>
+				<li><a href="creationFeuille">Créer une feuille d'exercices</a></li>
 				<li><a href="creationSequence">Créer une séquence</a></li>
+				<li><a href="controle">Créer des contrôles</a></li>
 				<li><a href="deco">Se déconnecter</a></li>
-            </ul>
+			</ul>
         </li>
     </ul>
 		<div id="mid">
