--- a/templates/generationControles.html
+++ b/templates/generationControles.html
@@ -112,6 +112,9 @@
 					console.log(document.getElementById("send"))
 					console.log(document.getElementById("send").innerHTML)
 					document.getElementById("send").submit()
+				}
+				else{
+					alert("Il y a une erreur");
 				};
 
 			}
