--- a/templates/affichageControle.html
+++ b/templates/affichageControle.html
@@ -24,29 +24,14 @@
 		</script>
 	</head>
 	<body onload="print()">
-		<div class="nom">QuizTio</div>
-    <ul class="menu">
-        <li>
-            {{Username}}
-            <ul class="sousMenu">
-				<li><a href="/">Accueil</a></li>
-				<li><a href="profil">Profil</a></li>
-				<li><a href="BDD">Liste de vos questions</a></li>
-				<li><a href="creationQuestion">Créer une question</a></li>
-				<li><a href="creationFeuille">Créer une feuille d'exercices</a></li>
-				<li><a href="creationSequence">Créer une séquence</a></li>
-				<li><a href="controle">Créer des contrôles</a></li>
-				<li><a href="deco">Se déconnecter</a></li>
-			</ul>
-        </li>
-    </ul>
+
 		<div id="mid">
             {% for li_dictionnaire in liste_controle: %}
             {%if anon%}
             {% for i in range(6) %}
             {% for i in range(10) %}
-                  <input type="checkbox">{{i}}<BR>
-            {% endfor %}
+                  <input type="checkbox">{{i}}
+            {% endfor %}<BR>
             {% endfor %}
             
             
@@ -67,13 +52,17 @@
 					</tr>
 				</thead>
 				{% for dico in li_dictionnaire: %}
-				<tr>					
+				<tr style="page-break-inside: avoid;">					
 					<td class="enonce_tableau">{{dico["Question"]| safe}}</td>
 					<td class="rep_tableau" style="text-align : left">
 						{% for rep in dico["REP"]: %}
 							<br><input type="checkbox" id="{{rep|safe}}" name="{{rep|safe}}"><label for="{{rep|safe}}">{{"  "+rep|safe}}<br></label>
 							{%if loop.last%}<br>{%endif%}
-						{%endfor%}</td>
+						{%endfor%}
+						{%if dico["REP"]==[]%}
+						<input type="text">
+						{%endif%}
+						</td>
 					</tr>
 					
 				{% endfor %}
