--- a/templates/affichageControle.html
+++ b/templates/affichageControle.html
@@ -37,8 +37,8 @@
             
             
             {%else%}
-            Nom : <input type="texte">
-            Prenom : <input type="texte">
+            Nom : <input type="texte"><br>
+            Prenom : <input type="texte"><br>
             Numero Etudiant : <input type="texte">
             
             
