image lancement séquence BDD

--- a/templates/BDD.html
+++ b/templates/BDD.html
@@ -179,7 +179,7 @@
 					</td><td class="enonce_tableau">{{dico["Question"]| safe}}</td>
 					<td class="rep_tableau">{% for rep in dico["REP"]: %}{{rep| safe}}{%endfor%}</td>
 					<td class="brep_tableau">{% for rep in dico["BREP"]: %}{{rep| safe}}{%endfor%}</td>
-					<td class="visu_tableau"><a href="afficheSequence/{{dico["ID"]}}"><img src="/static/visu.png"></a></td>
+					<td class="visu_tableau"><a href="afficheSequence/{{dico["ID"]}}"><img src="/static/play.png"></a></td>
 					<td class="visu_tableau"><a href="question/{{dico["ID"]}}"><img src="/static/visu.png"></a></td>
 					<td class="modif_tableau"><a href="modificationQuestion/{{dico["ID"]}}"><img src="/static/modif.png"></td>
 					<td class="supp_tableau"><a href="supprimer/{{dico["ID"]}}"><img src="/static/supp.png"></td>
