autocomplete off pour les log/reg

--- a/templates/login.html
+++ b/templates/login.html
@@ -23,7 +23,7 @@
     </ul>
 
 <div class="log_reg"><br>
-    <form action = "" method = "post">
+    <form action = "" method = "post" autocomplete="off">
         <h1>Se connecter</h1>
         {% if erreur == True: %}
         <div class="erreurLog">Nom d'utilisateur ou mot de passe incorrect</div>
