--- a/templates/register.html
+++ b/templates/register.html
@@ -21,7 +21,7 @@
         </li>
     </ul>
     <div class="log_reg"><br>
-        <form action = "" method = "post">
+        <form action = "" method = "post" autocomplete="off">
             <h1>Créer un compte</h1>
             <div class="entree">
                 <label for="idUser">Entrez votre nom d'utilisateur : </label><br>
